修改数据库表，新增sql

--- a/软件工程/火车售票管理系统/数据库/数据库表-改2.0.md
+++ b/软件工程/火车售票管理系统/数据库/数据库表-改2.0.md
@@ -46,22 +46,22 @@ insert users VALUES(null, "test01", 0, "12345678911", "admin", 0, NOW());
 | telephone | varchar(11) |          |          |          | 联系方式 |                                                              |
 |  ID_type  | varchar(15) |          |          |          | 证件类型 | 中华人民共和国居民身份证<br>港澳居民来往内地通行证<br>台湾居民来往大陆通行证 |
 |   ID_no   | varchar(30) |          |          |          | 证件号码 |                                                              |
-|   type    | varchar(5)  |          |          |          | 乘客类型 |               普通 \| 学生 \| 儿童 \| 残疾军人               |
+|   type    |   tinyint   |          |          |          | 乘客类型 |            0-成人, 1-学生, <br>2-儿童, 3-残疾军人            |
 
 ```sql
-CREATE TABLE passengers(
+CREATE TABLE passengers (
 	`id` INT UNSIGNED AUTO_INCREMENT,
-    `name` VARCHAR(10) NOT NULL,
-    `telephone` VARCHAR(11) NOT NULL,
-    `ID_type` VARCHAR(15) NOT NULL,
-    `ID_no` VARCHAR(30) NOT NULL,
-    `type` VARCHAR(5) NOT NULL,
-    PRIMARY KEY ( `id` )
-) ENGINE=InnoDB DEFAULT CHARSET=utf8;
+	`name` VARCHAR(10) NOT NULL,
+	`telephone` VARCHAR(11) NOT NULL,
+	`ID_type` VARCHAR(15) NOT NULL,
+	`ID_no` VARCHAR(30) NOT NULL,
+	`type` TINYINT NOT NULL COMMENT '0-成人, 1-学生, 2-儿童, 3-残疾军人',
+	PRIMARY KEY (`id`)
+) ENGINE = InnoDB CHARSET = utf8;
 ```
 
 ```sql
-INSERT passengers VALUES(NULL, "苏桐渤", "12345678911", "中华人民共和国居民身份证", "1234***********789", "学生");
+INSERT passengers VALUES(NULL, "苏桐渤", "12345678911", "中华人民共和国居民身份证", "1234***********789", "1");
 ```
 
 
@@ -145,11 +145,20 @@ INSERT stations VALUES(null, 1, "杭州东站");
 ```
 
 ```sql
-SELECT st.id AS id, pv.name AS province, ct.name AS city, st.name AS station
-FROM provinces pv, cities ct, stations st
-WHERE pv.id = ct.province_id
-	AND ct.id = st.city_id
-ORDER BY province, city;
+CREATE VIEW view_stations
+AS(
+	SELECT st.id AS id,
+        pv.name AS povince,
+        ct.name AS city,
+        st.name AS station
+    FROM provinces pv,
+        cities ct,
+        stations st
+    WHERE  pv.id = ct.province_id
+    	AND ct.id = st.city_id
+    ORDER  BY province, 
+    	city
+);
 ```
 
 
@@ -163,64 +172,106 @@ ORDER BY province, city;
 
 #### <span id="trains">火车信息表 trains</span>
 
-注：每列火车都有固定的往返时刻表
+- 表中的出发时间，规定的是每次发车的固定时间，因此不存在具体日期。
+- 同时可能存在次日达的情况，到达日期和出发日期不在同一天，为记录方便，表中记录的是列车的运行时长，而非到达时间。
 
-|       字段名称        |  字段类型   | 是否主键 |         是否外键          | 是否为空 |   字段含义   |          备注          |
-| :-------------------: | :---------: | :------: | :-----------------------: | :------: | :----------: | :--------------------: |
-|     **train_id**      |     int     |    是    |                           |          |   火车编码   |                        |
-|      train_type       |     int     |          |                           |          |   火车类型   |                        |
-|      train_name       | varchar(20) |          |                           |          |   火车名称   |       eg: G1818        |
-|  *departure_station*  |     int     |          | [火车站编码表](#stations) |          |  起始站编码  | 首程起始站、返程目的站 |
-| *destination_station* |     int     |          | [火车站编码表](#stations) |          |  目的站编码  | 首程目的站、返程起始站 |
-|    departure_time     |  datetime   |          |                           |          | 首程出发时间 |                        |
-|      arrive_time      |  datetime   |          |                           |          | 首程到达时间 |                        |
-|  back_departure_time  |  datetime   |          |                           |          | 返程出发时间 |                        |
-|   back_arrive_time    |  datetime   |          |                           |          | 返程到达时间 |                        |
+|       字段名称        |  字段类型   | 是否主键 |         是否外键          | 是否为空 |  字段含义  |                             备注                             |
+| :-------------------: | :---------: | :------: | :-----------------------: | :------: | :--------: | :----------------------------------------------------------: |
+|        **id**         |     int     |    是    |                           |          |  火车编码  |                                                              |
+|         name          | varchar(10) |          |                           |          |  火车名称  |                          eg: G1818                           |
+|         type          |     int     |          |                           |          |  火车类型  | 0-普通旅客列车<br>1-普通动车组列车<br>2-高速动车组列车<br>3-其他 |
+|  *departure_station*  |     int     |          | [火车站编码表](#stations) |          | 起始站编码 |                   首程起始站<br>返程目的站                   |
+| *destination_station* |     int     |          | [火车站编码表](#stations) |          | 目的站编码 |                   首程目的站<br>返程起始站                   |
+|    departure_time     |    time     |          |                           |          |  出发时间  |                                                              |
+|       last_time       |    time     |          |                           |          |  运行时长  |                                                              |
+
 
 ```sql
-CREATE TABLE trains(
-    `id` INT UNSIGNED AUTO_INCREMENT,  
-    PRIMARY KEY ( `id` ),
-) ENGINE=InnoDB DEFAULT CHARSET=utf8;
+CREATE TABLE trains (
+	`id` INT UNSIGNED AUTO_INCREMENT,
+	`name` VARCHAR(10) NOT NULL,
+	`type` tinyint NOT NULL COMMENT '0-普通旅客列车, 1-普通动车组列车, 2-高速动车组列车, 3-其他',
+	`departure_station` int UNSIGNED NOT NULL,
+	`destination_station` int UNSIGNED NOT NULL,
+	`departure_time` time NOT NULL,
+	`last_time` time NOT NULL,
+	PRIMARY KEY (`id`),
+	FOREIGN KEY (`departure_station`) REFERENCES stations (`id`),
+	FOREIGN KEY (`destination_station`) REFERENCES stations (`id`)
+) ENGINE = InnoDB CHARSET = utf8;
+```
+
+```sql
+insert trains values(null, 'G7659', 1, 1, 5, '06:33:00', '18:00');
+```
+
+```sql
+CREATE VIEW view_trains
+AS (
+    SELECT trains.id          id,
+        trains.name           name,
+        trains.type           type,
+        dep.name              departure_station,
+        des.name              destination_station,
+        trains.departure_time departure_time,
+        trains.last_time      last_time
+    FROM trains,
+        stations des,
+        stations dep
+    WHERE  trains.departure_station = dep.id
+          AND trains.destination_station = des.id
+);
 ```
 
 
 
-#### <span id="train_running">火车运行表 train_running</span>
+#### <span id="runnings">火车运行表 runnings</span>
 
-注：火车的一次运行，好比往返时刻表中一个方向的实例化，是单程的。
+|       字段名称        | 字段类型 | 是否主键 |       是否外键        | 是否为空 |   字段含义   |           备注           |
+| :-------------------: | :------: | :------: | :-------------------: | :------: | :----------: | :----------------------: |
+|        **id**         |   int    |    是    |                       |          | 火车运行编码 |                          |
+|      *train_id*       |   int    |          | [火车信息表](#trains) |          |   火车编码   |                          |
+|    departure_date     |   date   |          |                       |          |   发车日期   |                          |
+| actual_departure_time | datetime |          |                       |    是    | 实际发车时间 | 可为空，为空时表示未发车 |
+|  actual_arrive_time   | datetime |          |                       |    是    | 实际到达时间 | 课为空，为空时表示未到达 |
+|        cancel         | tinyint  |          |                       |          |   是否取消   |          01表示          |
 
+```sql
+CREATE TABLE runnings (
+	`id` INT UNSIGNED AUTO_INCREMENT,
+	`train_id` int UNSIGNED NOT NULL,
+	`departure_date` date NOT NULL,
+	`actual_departure_time` datetime,
+	`actual_arrive_time` datetime,
+	`cancel` tinyint NOT NULL COMMENT '0-正常, `1-取消`',
+	PRIMARY KEY (`id`),
+	FOREIGN KEY (`train_id`) REFERENCES trains (`id`)
+) ENGINE = InnoDB CHARSET = utf8;
+```
 
+```sql
+INSERT runnings VALUES (NULL, 1, '2021-12-21', NULL, NULL, 0);
+```
 
-单次运行有如下状态：
-
-- 是否取消：取消了就是不发车了，没有晚点的说法。
-- 是否发车/到达：表中有规定发车/到达时间和实际发车/到达时间。
-    - 实际发车时间为空时，表示未发车；不为空表示已发车；时间与规定发车时间不符的，经计算得出提早发车或晚点。
-    - 实际到达时间为空时，表示未到达；不为空表示已到达；时间与规定到达时间不符的，经计算得出提早达到或晚点。
-
-|       字段名称        | 字段类型 | 是否主键 |         是否外键          | 是否为空 |   字段含义   |           备注           |
-| :-------------------: | :------: | :------: | :-----------------------: | :------: | :----------: | :----------------------: |
-| **train_running_id**  |   int    |    是    |                           |          | 火车运行编码 |                          |
-|      *train_id*       |   int    |          |   [火车信息表](#trains)   |          |   火车编码   |                          |
-|  *departure_station*  |   int    |          | [火车站编码表](#stations) |          |  起始站编码  |                          |
-| *destination_station* |   int    |          | [火车站编码表](#stations) |          |  目的站编码  |                          |
-|    departure_time     | datetime |          |                           |          | 规定发车时间 |                          |
-|      arrive_time      | datetime |          |                           |          | 规定到达时间 |                          |
-| actual_departure_time | datetime |          |                           |    是    | 实际发车时间 | 可为空，为空时表示未发车 |
-|  actual_arrive_time   | datetime |          |                           |    是    | 实际到达时间 | 课为空，为空时表示未到达 |
-|        cancel         |   int    |          |                           |          |   是否取消   |          01表示          |
-
-解释：对比于【火车信息表】，有部分字段重复：
-
-- 起始站点、目的站点的重复：
-    - 【火车信息表】是双向意义上的信息，它的起始站点是首程的起始站，也是返程的目的站。
-    - 【火车运行表】是单程的，因此再次列出起始站和目的站的信息。
-- 规定出发时间、规定到达时间的重复：
-    - 与上同理。
-    - 【火车信息表】更像一个模板，规定了以后的列车的基本信息；其中发车和到达时间是可以修改的。
-        而【火车运行表】是一条条记录，执行完的列车信息是不会改变的。
-        所以即使后来从规范模板中修改了火车的发车/到达时间，已经执行完的火车的各项信息，是不应该被修改的。
+```sql
+CREATE VIEW view_runnings
+AS (
+    SELECT runnings.id id,
+           trains.id train_id,
+           trains.name name,
+           trains.type type,
+           trains.departure_station,
+           trains.destination_station,
+           Concat(runnings.departure_date, ' ', trains.departure_time) departure_datetime,
+           Addtime(Concat(runnings.departure_date, ' ', trains.departure_time), trains.last_time) arrive_time,
+           runnings.actual_departure_time,
+           runnings.actual_arrive_time,
+           runnings.cancel
+    FROM   view_trains trains,
+           runnings
+    WHERE  trains.id = runnings.train_id
+);
+```
 
 
 
@@ -258,11 +309,11 @@ CREATE TABLE trains(
 
 #### <span id="seats">座位信息表 seats</span>
 
-|      字段名称      | 字段类型 | 是否主键 |           是否外键           | 是否为空 |   字段含义   | 备注 |
-| :----------------: | :------: | :------: | :--------------------------: | :------: | :----------: | :--: |
-|    **seat_id**     |   int    |    是    |                              |          |   座位编码   |      |
-| *train_running_id* |   int    |          | [火车运行表](#train_running) |          |   火车编码   |      |
-| *seat_template_id* |   int    |          |  [座位模板](#seat_template)  |          | 座位模板编码 |      |
+|      字段名称      | 字段类型 | 是否主键 |          是否外键          | 是否为空 |   字段含义   | 备注 |
+| :----------------: | :------: | :------: | :------------------------: | :------: | :----------: | :--: |
+|    **seat_id**     |   int    |    是    |                            |          |   座位编码   |      |
+| *train_running_id* |   int    |          |  [火车运行表](#runnings)   |          |   火车编码   |      |
+| *seat_template_id* |   int    |          | [座位模板](#seat_template) |          | 座位模板编码 |      |
 
 
 
