--- a/软件工程/火车售票管理系统/数据库/数据库表-改2.0.md
+++ b/软件工程/火车售票管理系统/数据库/数据库表-改2.0.md
@@ -157,8 +157,8 @@ AS(
     FROM provinces pv,
          cities ct,
          stations st
-    WHERE   pv.id = ct.province_id
-    	AND ct.id = st.city_id
+    WHERE pv.id = ct.province_id
+      AND ct.id = st.city_id
     ORDER  BY province, city
 );
 ```
@@ -197,9 +197,9 @@ CREATE TABLE trains (
 	`destination_station` INT UNSIGNED NOT NULL,
 	`departure_time`      TIME NOT NULL,
 	`last_time`           TIME NOT NULL,
-	PRIMARY KEY (`id`),
-	FOREIGN KEY (`departure_station`) REFERENCES stations (`id`),
-	FOREIGN KEY (`destination_station`) REFERENCES stations (`id`)
+	PRIMARY KEY ( `id`),
+	FOREIGN KEY ( `departure_station` ) REFERENCES stations ( `id` ),
+	FOREIGN KEY ( `destination_station` ) REFERENCES stations ( `id` )
 ) ENGINE = InnoDB CHARSET = utf8;
 ```
 
@@ -210,18 +210,18 @@ INSERT INTO trains VALUES (null, 'G7659', 1, 1, 5, '06:33:00', '00:18:00');
 ```sql
 CREATE VIEW view_trains
 AS (
-    SELECT trains.id          id,
-        trains.name           name,
-        trains.type           type,
-        dep.name              departure_station,
-        des.name              destination_station,
-        trains.departure_time departure_time,
-        trains.last_time      last_time
+    SELECT trains.id             AS id,
+           trains.name           AS name,
+           trains.type           AS type,
+           dep.name              AS departure_station,
+           des.name              AS destination_station,
+           trains.departure_time AS departure_time,
+           trains.last_time      AS last_time
     FROM trains,
-        stations des,
-        stations dep
-    WHERE  trains.departure_station = dep.id
-          AND trains.destination_station = des.id
+         stations des,
+         stations dep
+    WHERE trains.departure_station = dep.id
+      AND trains.destination_station = des.id
 );
 ```
 
@@ -246,8 +246,8 @@ CREATE TABLE runnings (
 	`actual_departure_datetime` DATETIME,
 	`actual_arrive_datetime`    DATETIME,
 	`cancel`                    TINYINT NOT NULL COMMENT '0-正常, `1-取消`',
-	PRIMARY KEY (`id`),
-	FOREIGN KEY (`train_id`) REFERENCES trains (`id`)
+	PRIMARY KEY ( `id` ),
+	FOREIGN KEY ( `train_id` ) REFERENCES trains ( `id` )
 ) ENGINE = InnoDB CHARSET = utf8;
 ```
 
@@ -296,8 +296,8 @@ CREATE TABLE price (
 	`train_id` INT UNSIGNED NOT NULL,
 	`type`     VARCHAR(5) NOT NULL,
 	`price`    FLOAT NOT NULL,
-	PRIMARY KEY (`id`),
-	FOREIGN KEY (`train_id`) REFERENCES trains (`id`)
+	PRIMARY KEY ( `id` ),
+	FOREIGN KEY ( `train_id` ) REFERENCES trains ( `id` )
 ) ENGINE = InnoDB CHARSET = utf8;
 ```
 
@@ -318,8 +318,8 @@ AS (
     	   trains.last_time           AS last_time,
     	   price.type                 AS seat_type, 
     	   price.price                AS price
-	FROM view_trains trains, price
-	WHERE trains.id = price.train_id
+	FROM   view_trains trains, price
+	WHERE  trains.id = price.train_id
     ORDER BY trains.id, price.id
 );
 ```
@@ -347,9 +347,9 @@ CREATE TABLE cabins (
 	`train_id` INT UNSIGNED NOT NULL,
 	`type`     INT UNSIGNED NOT NULL,
 	`number`   TINYINT NOT NULL,
-	PRIMARY KEY (`id`),
-	FOREIGN KEY (`train_id`) REFERENCES trains (`id`),
-	FOREIGN KEY (`type`) REFERENCES price (`id`)
+	PRIMARY KEY ( `id` ),
+	FOREIGN KEY ( `train_id` ) REFERENCES trains ( `id` ),
+	FOREIGN KEY ( `type` ) REFERENCES price ( `id` )
 ) ENGINE = InnoDB CHARSET = utf8;
 ```
 
@@ -388,8 +388,8 @@ CREATE TABLE seat_template (
 	`id`       INT UNSIGNED AUTO_INCREMENT,
     `cabin_id` INT UNSIGNED NOT NULL,
     `position` VARCHAR(5) NOT NULL,
-	PRIMARY KEY (`id`),
-	FOREIGN KEY (`cabin_id`) REFERENCES cabins (`id`)
+	PRIMARY KEY ( `id` ),
+	FOREIGN KEY ( `cabin_id` ) REFERENCES cabins ( `id` )
 ) ENGINE = InnoDB CHARSET = utf8;
 ```
 
@@ -477,9 +477,9 @@ CREATE TABLE seats (
 	`id`               INT UNSIGNED AUTO_INCREMENT,
     `runnings_id` 	   INT UNSIGNED NOT NULL,
     `seat_template_id` INT UNSIGNED NOT NULL,
-	PRIMARY KEY (`id`),
-	FOREIGN KEY (`runnings_id`) REFERENCES runnings (`id`),
-    FOREIGN KEY (`seat_template_id`) REFERENCES seat_template (`id`)
+	PRIMARY KEY ( `id` ),
+	FOREIGN KEY ( `runnings_id` ) REFERENCES runnings ( `id` ),
+    FOREIGN KEY ( `seat_template_id` ) REFERENCES seat_template ( `id` )
 ) ENGINE = InnoDB CHARSET = utf8;
 ```
 
