--- a/软件工程/火车售票管理系统/数据库/数据库表-改2.0.md
+++ b/软件工程/火车售票管理系统/数据库/数据库表-改2.0.md
@@ -144,7 +144,7 @@ CREATE TABLE stations(
 ```
 
 ```sql
-INSERT stations VALUES(null, 1, '杭州东站');
+INSERT INTO stations VALUES(null, 1, '杭州东站');
 ```
 
 ```sql
@@ -453,9 +453,9 @@ delimiter ;
 ```
 
 ```sql
-CALL add_cabin_and_seat(1, 1, 1, 1, 5, 3);
-CALL add_cabin_and_seat(1, 2, 2, 4, 8, 4);
-CALL add_cabin_and_seat(1, 3, 5, 16, 10, 15);
+CALL add_cabin_and_seat(3, 5, 1, 2, 6, 2);
+CALL add_cabin_and_seat(3, 6, 3, 5, 8, 2);
+CALL add_cabin_and_seat(3, 7, 6, 12, 10, 3);
 
 #	train-火车编号，type-车厢/座位类型，
 #	no_start-起始车厢，no_end-结束车厢，
@@ -489,6 +489,7 @@ INSERT INTO seats (
     FROM   runnings, cabins, seat_template seat 
     WHERE  cabins.id = seat.cabin_id 
        AND runnings.train_id = cabins.train_id
+       AND runnings.id = 2
 );
 ```
 
@@ -522,9 +523,9 @@ AS (
 SELECT COUNT(*)
 FROM  view_seats
 WHERE departure_station LIKE '%杭州%'
-  AND destination_station LIKE '%绍兴%'
+  AND destination_station LIKE '%潮汕%'
   AND departure_datetime LIKE '%12-21%'
-  AND seat_type = '商务座';
+  AND seat_type = '一等座';
 ```
 
 
@@ -535,30 +536,127 @@ WHERE departure_station LIKE '%杭州%'
 
 #### <span id="orders">订单信息表 orders</span>
 
-|   字段名称   | 字段类型 | 是否主键 |       是否外键       | 是否为空 |      字段含义      | 备注 |
-| :----------: | :------: | :------: | :------------------: | :------: | :----------------: | :--: |
-| **order_id** |   int    |    是    |                      |          |      订单编码      |      |
-|  *user_id*   |   int    |          | [用户信息表](#users) |          | 购票人（用户）编号 |      |
-| create_time  | datetime |          |                      |          |    订单创建时间    |      |
-|   has_paid   |   int    |          |                      |          |    是否已经付款    |      |
+|  字段名称   | 字段类型 | 是否主键 |       是否外键       | 是否为空 |      字段含义      |    备注    |
+| :---------: | :------: | :------: | :------------------: | :------: | :----------------: | :--------: |
+|   **id**    |   int    |    是    |                      |          |      订单编码      |            |
+|  *user_id*  |   int    |          | [用户信息表](#users) |          | 购票人（用户）编号 |            |
+| create_time | datetime |          |                      |          |    订单创建时间    |            |
+|    paid     | tinyint  |          |                      |          |    是否已经付款    | 1-成功付款 |
+|   cancel    | tinyint  |          |                      |          |    是否取消订单    | 1-取消订单 |
+
+```sql
+CREATE TABLE orders (
+	`id`          INT UNSIGNED AUTO_INCREMENT,
+    `user_id`     INT UNSIGNED NOT NULL,
+    `create_time` DATETIME NOT NULL,
+    `paid`        TINYINT NOT NULL,
+    `cancel`      TINYINT NOT NULL,
+	PRIMARY KEY ( `id` ),
+	FOREIGN KEY ( `user_id` ) REFERENCES users ( `id` )
+) ENGINE = InnoDB CHARSET = utf8;
+```
+
+```sql
+INSERT INTO orders VALUES (null, 1, NOW(), 0, 0);
+```
+
+```sql
+CREATE VIEW view_orders
+AS (
+	SELECT orders.id AS id,
+           users.id AS user_id,
+           users.name AS user_name,
+           orders.create_time AS create_time, 
+           orders.paid AS paid,
+           orders.cancel AS cancel
+    FROM users, orders 
+    WHERE users.id = orders.user_id
+);
+```
 
 
-
-！！订单是一起取消的
-
-！！可单独改签和退票
 
 #### <span id="order_details">订单详细 order_details</span>
 
-注：考虑到一次订单可能为多个人一起买票，但是订单的改签和取消，可能发生在整个订单或个别乘客身上。
-		所以改签和取消的状态绑定到了订单详细上。
-
 |       字段名称       | 字段类型 | 是否主键 |          是否外键          | 是否为空 |     字段含义     |           备注           |
 | :------------------: | :------: | :------: | :------------------------: | :------: | :--------------: | :----------------------: |
-|    **detail_id**     |   int    |    是    |                            |          |   订单详细编码   |                          |
+|        **id**        |   int    |    是    |                            |          |   订单详细编码   |                          |
 |      *order_id*      |   int    |    是    |   [订单信息表](#orders)    |          |     订单编码     |                          |
 |    *passenger_id*    |   int    |          | [乘客信息表](#passengers)  |          |     乘客编码     |                          |
 |      *seat_id*       |   int    |          |    [座位信息表](#seats)    |          |     座位编码     |                          |
 | *previous_detail_id* |   int    |          | [订单详细](#order_details) |    是    | 改签前的订单详细 | 空值表示普通订单，非改签 |
-|       canceled       |   int    |          |                            |          |    是否已取消    |                          |
+|        cancel        |   int    |          |                            |          |     是否取消     |                          |
+
+
+
+# 添加流程
+
+#### 添加火车
+
+- `provinces` 省份编码表添加对应省份 `(null, '省份')`
+- `cities` 城市编码表添加对应城市 `(null, 省份编码, '城市')`
+- `stations` 火车站编码表添加车站 `(null, 城市编码, '车站')`
+
+```sql
+INSERT INTO provinces VALUES(NULL, '浙江省');
+INSERT INTO cities VALUES(NULL, 1, '杭州市'); 
+INSERT INTO stations VALUES(null, 1, '杭州东站');
+```
+
+- `trains` 火车信息表添加火车 `(null, '火车', 火车类型编码, 起始站编码, 目的站编码, '发车时间', '运行时长')`
+
+```sql
+INSERT INTO trains VALUES (null, 'D3111', 1, 1, 6, '07:30:00', '08:22:00');
+```
+
+#### 添加固定车厢和座位
+
+- `price` 火车价位表添加对应的座位类型及价格 `(null, 火车编码, '座位类型', 价格)`
+
+```sql
+INSERT INTO price VALUES (null, 5, '一等座', 687);
+INSERT INTO price VALUES (null, 5, '二等座', 430);
+INSERT INTO price VALUES (null, 5, '无座', 430);
+```
+
+- `cabins` `seat_template` 添加固定的车厢和座位模板
+- 存储过程 `add_cabin_and_seat(火车编码, 车厢/座位类型, 起始车厢, 结束车厢, 行数, 列数)`
+
+```sql
+CALL add_cabin_and_seat(5, 9, 1, 3, 8, 4);
+CALL add_cabin_and_seat(5, 10, 4, 10, 10, 5); 
+```
+
+#### 添加运行班次和相应座位
+
+- `tunnings` 火车运行表添加火车的某次运行 `(null, 火车编码, '发车日期', null, null, 0)`
+
+```sql
+INSERT runnings VALUES (NULL, 5, '2021-12-21', NULL, NULL, 0);
+```
+
+- `seats` 座位信息表添加一次运行的所有座位，选择对应的运行编码
+
+```sql
+INSERT INTO seats (
+	SELECT null, runnings.id, seat.id 
+    FROM   runnings, cabins, seat_template seat 
+    WHERE  cabins.id = seat.cabin_id 
+       AND runnings.train_id = cabins.train_id
+       AND runnings.id = 3
+);
+```
+
+#### 查询余票
+
+- `view_seats` 座位信息视图，起始站+目的站+日期+座位类型
+
+```sql
+SELECT COUNT(*)
+FROM  view_seats
+WHERE departure_station LIKE '%杭州%'
+  AND destination_station LIKE '%潮汕%'
+  AND departure_datetime LIKE '%12-21%'
+  AND seat_type = '一等座';
+```
 
