【网络编程】 论文进度++

--- a/网络编程/论文相关.md
+++ b/网络编程/论文相关.md
@@ -1,10 +1,51 @@
-## 内容
+# 作品介绍
 
 
 
-- 线程同步
-- 防死锁策略
-- 数据库安全策略
+本次作业的项目，是做一个基础的选课系统的。需要实现的基本功能有如下：
+
+- 项目的实现**必须是Java程序**，因此该次作业采用的 JavaWeb 的形式，页面显示的内容由 `html` 完成，核心的通信及选课部分由 `Java` 完成。
+- 程序必须进行**身份认证**，此处理解的身份认证即使用系统的账号登录。系统分设有客户端和服务器端，无论进入哪个部分，都会先对账号密码进行校验，再判断是否拥有进入对应系统的权限。
+- 程序需要使用**多线程**。我在选课部分使用到了多线程，为每一个学生的每一次选课任务创建一个线程，交由线程进行选课。而课程余量相关的问题则涉及到了线程同步，也有考虑进去并且解决。
+- 程序需要**使用 `URL` `URLConnection`**，主要完成对目标资源的连接。因此在客户端即学生选课端获取选课信息处，使用了 `URLConnection` 与目标资源的连接，使用 `POST` 的方式获取信息并显示。
+- 程序需要**使用 `Socket`**，完成的两个进程之间的双向通信。因此在客户端即学生选课系统端获取个人完整信息处，使用了 `Socket` 与服务器端建立连接进行双向通信，从而获取学生个人的完整信息。
+- 程序需要考虑**数据库安全**，程序中涉及到对学生和课程信息的管理，因此需要对数据库的安全采取措施以免受到污染破坏。
+
+
+
+### 服务器端
+
+- 课程数据库：内含课程编码、课程名称、课程简介、课程适用专业、开设学期、人数限定、选课资格限定
+
+![image-20211219201917013](论文相关.assets/image-20211219201917013.png)
+
+- 学生数据库：内含学号、姓名、所在学院、专业、联系方式、已修课程、新选课程、认证信息
+
+![image-20211219202021156](论文相关.assets/image-20211219202021156.png)
+
+- 接收远程客户端的接入申请、用户验证，客户的获取数据进行显示是需要先与服务器端进行连接，服务器端会允许远程客户端的连接申请，再进行对应的数据传输。
+- 管理人员对课程数据库的修改，即拥有新设课程、管理课程的权力。
+- 对每位选课的学生建立线程，并且考虑人数上限的处理。
+
+
+
+### 客户端
+
+- 通过 `HTTP` 协议登录选课系统。
+- 提供选课人员的身份信息。学生在登录系统以后，会有单独的页面与服务器端建立连接，获取该学生的完整信息。
+- 浏览可选课程、拟选课程。
+
+
+
+
+
+
+
+
+
+
+
+# 难点解决
 
 
 
