网络编程进度++

--- a/网络编程/论文相关.md
+++ b/网络编程/论文相关.md
@@ -1,3 +1,11 @@
+# 摘要
+
+
+
+本学期『网络编程』的期末作业是在实现基本要求的基础上，完成一个选课系统。本篇内容，我会以个人完成的作业项目为基础，围绕如何实现课程要求、实现过程中遇到的难点和解决办法、项目总结等方面，做一个简单概述。并且还会对线程同步、防死锁策略、数据库安全三大重要内容着重展开讨论。
+
+
+
 # 作品介绍
 
 
@@ -15,6 +23,8 @@
 
 ### 服务器端
 
+
+
 - 课程数据库：内含课程编码、课程名称、课程简介、课程适用专业、开设学期、人数限定、选课资格限定
 
 ![image-20211219201917013](论文相关.assets/image-20211219201917013.png)
@@ -30,6 +40,8 @@
 
 
 ### 客户端
+
+
 
 - 通过 `HTTP` 协议登录选课系统。
 - 提供选课人员的身份信息。学生在登录系统以后，会有单独的页面与服务器端建立连接，获取该学生的完整信息。
