网络编程论文，持续copy

--- a/网络编程/论文相关.md
+++ b/网络编程/论文相关.md
@@ -90,9 +90,7 @@
 
 - 定义
 
-> 线程有可能和其他线程共享一些资源，比如，内存，文件，数据库等。
->
-> 当多个线程同时读写同一份共享资源的时候，可能会引起冲突。这时候，我们需要引入线程“同步”机制，即各位线程之间要有个先来后到，不能一窝蜂挤上去抢作一团。
+> 死锁是指两个或两个以上的进程在执行过程中，由于竞争资源或者由于彼此通信而造成的一种阻塞的现象，若无外力作用，它们都将无法推进下去。此时称系统处于死锁状态或系统产生了死锁，这些永远在互相等待的进程称为死锁进程。
 
 - 条件
 
