--- a/Android/整理.md
+++ b/Android/整理.md
@@ -187,3 +187,87 @@ button.setOnClickListener(new View.OnClickListener){
 }
 ```
 
+
+
+
+
+# 2 UI
+
+
+
+## 2.1 常用控件的使用
+
+
+
+### 2.1.1 基本属性
+
+```xml
+android:id="@+id/id"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:gravity="center"
+android:textSize="24dp"
+android:textColor="#000000"
+android:text="hello world"
+```
+
+
+
+### 2.1.2 常用控件
+
+- `TextView`
+- `EditText`
+- `Button`
+- `CheckBox`
+
+
+
+## 2.2 LinearLayout
+
+> Android中有六大布局,分别是: LinearLayout(线性布局)，RelativeLayout(相对布局)，TableLayout(表格布局) FrameLayout(帧布局)，AbsoluteLayout(绝对布局)，GridLayout(网格布局)
+
+```xml
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical" >
+</LinearLayout>
+```
+
+
+
+## 2.3 获取组件的方法
+
+```java
+TextView textView = findById(R.id.name);
+```
+
+
+
+## 2.4 字体和长度/宽度单位
+
+```xml
+<?xml version="1.0" encoding="utf-8"?>
+<font-family>
+    <font android:font="@[package:]font/font_to_include"
+          android:fontStyle=["normal" | "italic"]
+          android:fontWeight="weight_value" />
+</font-family>
+```
+
+> 1、当修改系统字体大小时，字体大小以dp为单位时，大小不变；
+> 2、当修改系统字体大小时，字体大小以sp为单位时，大小跟随变化；
+
+![image-20211225191403630](整理.assets/image-20211225191403630.png)
+
+
+
+## 2.5 资源目录
+
+| res  |  子目录   |                             功能                             |
+| :--: | :-------: | :----------------------------------------------------------: |
+|      | drawable/ | 位图文件（.png、jpg、.gif）或编译为以下 Drawable 资源子类型的 XML 文件： |
+|      |  mipmap/  |           适用于不同启动器图标密度的 Drawable 文件           |
+|      |  layout/  |               用于定义用户界面布局的 XML 文件                |
+|      |  values/  |        包含字符串、整型数和颜色等简单值的 XML 文件。         |
+
