--- a/Android/整理.md
+++ b/Android/整理.md
@@ -271,3 +271,150 @@ TextView textView = findById(R.id.name);
 |      |  layout/  |               用于定义用户界面布局的 XML 文件                |
 |      |  values/  |        包含字符串、整型数和颜色等简单值的 XML 文件。         |
 
+
+
+# 3 碎片
+
+
+
+## 3.1 碎片的基本概念
+
+> 碎片是一种可以嵌入在活动当中的UI片段，它能让程序更加合理和冲锋的利用大屏幕的空间。
+
+
+
+## 3.2 碎片的使用
+
+
+
+### 3.2.1 碎片的定义
+
+- 新建一个左碎片布局 `left_fragment.xml`
+
+```xml
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical" >
+    <Button/>
+</LinearLayout>
+```
+
+```java
+public class LeftFragment extends Fragment {
+    @Override
+    public View onCreateView(LayoutInflater inflater, ViewGroup container, Bundle bundle) {
+        View view = inflater.inflate(R.layou.left_fragment, container, false);
+        return view;
+    }
+}
+```
+
+- 新建一个右碎片布局 `right_fragment.xml`
+
+```xml
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical" >
+    <TextView/>
+</LinearLayout>
+```
+
+```java
+public class RightFragment extends Fragment {
+    @Override
+    public View onCreateView(LayoutInflater inflater, ViewGroup container, Bundle bundle) {
+        View view = inflater.inflate(R.layou.right_fragment, container, false);
+        return view;
+    }
+}
+```
+
+- 修改使用碎片的页面布局
+
+```xml
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical" >
+    
+    <fragment android:name="cn.lllllan.android.LeftFragment"
+              android:layout_width="0dp"
+              android:layout_height="match_parent"
+              android:layout_weight="1"/>
+    
+    <fragment android:name="cn.lllllan.android.RightFragment"
+              android:layout_width="0dp"
+              android:layout_height="match_parent"
+              android:layout_weight="1"/>
+    
+</LinearLayout>
+```
+
+![在这里插入图片描述](https://img-blog.csdnimg.cn/2019100620502972.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L2xpX3h1bmh1YW4=,size_16,color_FFFFFF,t_70)
+
+
+
+
+
+### 3.2.2 碎片的动态添加/更换
+
+- 创建待添加的碎片实例
+- 获取 Fragment Manager，在活动中可以直接通过调用 `getSupportFragment()` 方法获得。
+- 开启一个事务，通过调用 `beginTransaction` 方法开启
+- 想容器内添加或替换碎片，一般使用 `replace()` 方法是实现，需要传入容器的id和待添加的碎片实例
+- 提交事务，调用 `commit()` 方法
+
+```java
+public class MainActivity extends AppCompatActivity implements View.onClickListener {
+    @Override
+    protected void onCreate(Bundle bundle) {
+        super.onCreate(bundle);
+        setContentView(R.layout.activity_main);
+        Button button = (Button) findById(R.id.button);
+        button.setOnClickListener(this);
+        replaceFragment(new RightFragment());
+    }
+    
+    @Override
+    public void onClick(View view) {
+        switch(view.getId()) {
+            case R.id.button:
+                replaceFragment(new AnotherRightFragment());
+                break;
+            default:
+                break;
+        }
+    }
+    
+    private void replaceFragment(Fragment fragment) {
+        FragmentManager fragmentManager = getSupportFragmentManager();
+        FragmentTransaction transaction = fragmentManager.beginTransaction();
+        transaction.replace(R.id.right_layout, fragment);
+        transaction.commit();
+    }
+}
+```
+
+
+
+## 3.3 碎片的生命周期状态
+
+> - 运行状态：碎片可见并且它所关联的活动正出于运行状态
+> - 暂停状态：碎片所关联的活动进入暂停状态，但该碎片仍然可见
+> - 停止状态：碎片所关联的活动进入停止状态，
+> - 销毁状态：碎片所关联的活动被销毁，
+
+- `onAttach()`: 碎片实例被**关联**到活动实例。碎片和活动还没有完全初始化。通常，你在该方法中获取到活动的引用，在碎片将来的初始化工作中被使用。
+- `onCreate()`: 当**创建**碎片时，系统调用该方法。你需要初始化一些碎片的必要组件。这些组件是当碎片被暂停、停止时需要保留的，以便被恢复。
+- `onCreateView()`: 当碎片将要**第一次绘制**它的用户界面时系统调用该方法。为了绘制碎片的UI，你需要从该方法中返回一个代表碎片根布局的View组件。如果该碎片不提供用户界面，直接返回null。
+- `onActivityCreated`: 当**宿主活动被创建**，在 `onCreateView()` 方法之后调用该方法。活动和碎片实例与活动的视图层级被创建。这时，视图可以通过 `findViewById()` 方法来访问。在这个方法中，你可以实例化需要Context对象的对象。
+- `onStart()`: 碎片**可见时**调用该方法。
+- `onResume()`: 碎片**可交互时**调用该方法。
+- `onPause()`: 当首次表明用户将要**离开碎片时**系统调用该方法。通常，这里你需要提交任何的会超出用户会话的持久化的变化。
+- `onStop()`: 碎片将要**被停止时**调用。
+- `onDestroyView()`: 调用该方法后，碎片将要被销毁。
+- `onDestroy()`: 该方法被用来**清理碎片的状态**。但在Android平台并不保证一定被调用。
+
+![图片](https://www.runoob.com/wp-content/uploads/2015/06/fragment.jpg)
