--- a/Android/整理.md
+++ b/Android/整理.md
@@ -418,3 +418,183 @@ public class MainActivity extends AppCompatActivity implements View.onClickListe
 - `onDestroy()`: 该方法被用来**清理碎片的状态**。但在Android平台并不保证一定被调用。
 
 ![图片](https://www.runoob.com/wp-content/uploads/2015/06/fragment.jpg)
+
+
+
+
+
+# 4 数据持久化
+
+
+
+## 4.1 数据持久化的方法
+
+
+
+### 4.1.1 文件存储
+
+> 将数据原封不动地保存到文件当中，适合用于存储一些简单的文本数据或二进制数据。
+
+```java
+FileOutputStream out = openFileOutput("data", Context.MODE_PRIVATE);
+BufferedWriter writer = new BufferedWriter(new OutputStreamWriter(out));
+writer.write("hello wolrd");
+```
+
+```java
+FileInputStream in = openFileInput("data");
+BufferedReader reader = new BufferedReader(new InputStreamReader(in));
+String line = "";
+StringBuilder content = new StringBuilder();
+while((line = reader.readLine()) != null) {
+    content.append(line);
+}
+```
+
+
+
+### 4.1.2 SharedPreferences 存储
+
+> 使用键值对的方式存储数据。
+
+使用方法详见 4.2
+
+
+
+### 4.1.3 SQLite 数据库存储
+
+> 轻量级的关系型数据库。适用于存储大量复杂的关系型数据。
+
+使用方法详见4.3
+
+
+
+### 4.1.4 LitePal数据库
+
+> 开源的Android数据库框架，采用了对象关系映射的模式，并将常用的数据库功能进行了封装。
+
+
+
+
+
+## 4.2 SharedPreferences
+
+
+
+### 4.2.1 获取 SharedPreferences 对象
+
+```java
+getSharedPreferences();
+getPreferences();
+getDefaultSharedPreferences();
+```
+
+
+
+### 4.2.2 存储数据
+
+- 获取 `SharePreferences.Editor` 对象
+- 向该对象中添加数据
+- 调用 apply() 方法将添加的数据提交
+
+```java
+SharedPreferences.Editor editor = getSharedPeferences("data", MODE_PRIVATE).edit();
+editor.putString("name", "Tom");
+editor.putInt("age", 28);
+editor.putBoolean("married", false);
+editor.apply();
+```
+
+
+
+### 4.2.3 读取数据
+
+```java
+SharedPreferences pref = getSharedPreferences("data", MODE_PRIVATE);
+String name = pref.getString("name", "");
+int age = pref.getInt("age", 0);,
+boolean married = pref.getBoolean("married", false);
+```
+
+
+
+
+
+## 4.3 SQLite
+
+
+
+### 4.3.1 创建数据库
+
+```java
+public class MyDatabaseHelper extends SQLiteOpenHelper {
+    public static final String CREATE_BOOK = "create table book ("
+        + "id integer primary key autoincrement, "
+        + "author text,"
+        + "price real, "
+        + "pages integer, "
+        + "name text)";
+    
+    private Context mContext;
+    
+    public MyDatabaseHelper(Context context, String name, SQLiteDatabase.CursorFactory factory, int version) {
+        super(context, name, factory, version);
+        mContext = context;
+    }
+    
+    @Override
+    public void onCreate(SQLiteDatabse db) {
+        db.execSQL(CREATE_BOOK);
+    }
+    
+    @Override
+    public void onUpgrade(SQLiteDatabase db, int oldVersion, int newVersion) {
+        
+    }
+}
+```
+
+```java
+MyDatabaseHelper dbHelper = new MyDatabaseHelper(this, "BookStore.db", null, 1);
+dbHelper.getWritableDatabase();
+```
+
+
+
+### 4.3.2 添加数据
+
+```java
+MyDatabaseHelper dbHelper = new MyDatabaseHelper(this, "BookStore.db", null, 1);
+SQLiteDatabase db = dbHelper.getWritableDatabase();
+
+ContentValues values = new ContentValues();
+values.put("name", "Tom");
+values.put...
+db.insert("Book", null, values);
+```
+
+
+
+### 4.3.3 更新数据
+
+```java
+ContentValues values = new ContentValues();
+values.put("name", "Jack");
+db.update("Book", values, "name = ?", new String{}{"Tom"});
+```
+
+
+
+### 4.3.4 查询数据
+
+```java
+Cursor cursor = db.query("Book", null, null, null, null, null, null);
+if (cursor.moveToFirst()) {
+    do {
+        String name = cursor.getString(cursor.getColumnIndex("name"));
+        ...
+    } while(cursor.moveToNext());
+}
+cursor.close();
+```
+
