--- a/Android/整理.md
+++ b/Android/整理.md
@@ -598,3 +598,109 @@ if (cursor.moveToFirst()) {
 cursor.close();
 ```
 
+
+
+
+
+# 5 广播
+
+
+
+## 5.1 广播接收器的定义
+
+```java
+class MyBroadcastReceiver extends BroadcastReceiver {
+    @Override
+    public void onReceiver(Context context, Intent intent) {
+        Toast.makeText(context, "", Toast.LENGTH_SHORT).show();
+    }
+}
+```
+
+
+
+### 5.1.1 动态注册
+
+```java
+intentFilter intentFilter = new IntentFilter();
+intentFilter.addAction("anrdoid.net.conn.CONNECTIVITY_CHANGE");
+MyBroadcastReceiver mbr = new MyBroadcastReceiver();
+registerReceiver(mbr, intentFilter());
+```
+
+
+
+### 5.1.2 静态注册
+
+配置 `AndroidMainfest.xml`
+
+```xml
+<receiver android:name=".MyBroadcastReceiver" // 接收器的类名
+          android:enabled="true"
+          android:exported="true">
+    <intent-filter>
+    	<action android:name="android.intent.action.BOOT_COMPLETED"/>
+    </intent-filter>
+</receiver>
+```
+
+
+
+### 5.1.3 申请权限
+
+> 无论是动态注册，还是静态注册， 都需要在  `AndroidMainfest.xml` 中申请权限
+
+```xml
+<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/> // 监听网络的权限
+```
+
+
+
+## 5.2 广播的发送和接收
+
+
+
+### 5.2.1 发送自定义广播
+
+```java
+button.setOnClickListener(new View.OnClickListener() {
+    @Override
+    public void onClick(View view) {
+        Intent intent = new Intent("com.example.broadcat.MY_BROADCAST"); // 自定义
+        sendBroadcast(intent);
+    }
+})
+```
+
+
+
+### 5.2.2 接受自定义广播
+
+```java
+intentFilter intentFilter = new IntentFilter();
+intentFilter.addAction("com.example.broadcat.MY_BROADCAST");
+MyBroadcastReceiver mbr = new MyBroadcastReceiver();
+registerReceiver(mbr, intentFilter());
+```
+
+
+
+## 5.3 广播类型
+
+- 标准广播：异步执行，所有接收器同时接收到。
+- 有序广播：同步执行，所有接收器逐个接收，广播过程可以被接收器拦截，之后的接收器将接收不到广播。
+
+```java
+sendOrderedBroadcast(intent, null); // 发送有序广播
+abortBroadcast();					// 拦截广播
+```
+
+
+
+## 5.4 本地广播极其特点
+
+本地广播机制下发出的广播只能够在应用程序内部进行传递，并且广播接收器也只能接收来自本地应用程序发出的广播。
+
+- 可以明确地知道正在发送的广播不会离开我们的程序，不必担心机密数据泄露。
+- 其他的程序无法将广播发送到我们程序的内部，不需要担心有安全漏洞的隐患。
+- 发送本地广播比发送系统全局广播更加高效。
