--- a/软件工程/软工复习.md
+++ b/软件工程/软工复习.md
@@ -169,3 +169,11 @@
 | 快速原型模型 |                                                            | 使用户能够感受到实际的系统，使开发者能够快速地构造出系统的框架。 | 产品的先天性不足，因为开发者常常需要做实现上的折中，可能采用不合适的操作系统或程序设计语言，以使原型能够尽快工作。 |
 |   增量模型   |                                                            | 人员分配灵活，刚开始不用投入大量人力资源，当核心产品很受欢迎时，可增加人力实现下一个增量；当配备的人员不能在设定的期限内完成产品时，它提供了一种先推出核心产品的途径，这样就可以先发布部分功能给客户，对客户起到镇静剂的作用。 | 至始至终开发者和客户纠缠在一起，直到完全版本出来；适合于软件需求不明确、设计方案有一定风险的软件项目。 |
 
+（模型的图片详见 P16-18）
+
+
+
+
+
+# 第二章 可行性研究
+
