--- a/软件工程/软工复习.md
+++ b/软件工程/软工复习.md
@@ -1,3 +1,10 @@
+> 免责声明：
+>
+> - 黄鸡整理的 markdown 转，若导致考试丢分，黄鸡负责
+> - 文档中的章节序号，与书本序号不严格相同
+
+
+
 # 第一章 软件工程概述
 
 
@@ -177,3 +184,117 @@
 
 # 第二章 可行性研究
 
+
+
+## 2.1 可行性研究的任务
+
+> 可行性研究的目的，就是用最小的代价在尽可能短的时间内确定问题是否能过解决。
+
+> 可行性研究最根本的任务是对以后的行动方针提出建议。
+
+- 首先需要分析和澄清问题定义
+- 在澄清了问题定义之后，分析员应该导出系统的逻辑模型。然后从系统逻辑模型出发，探索若干种可供选择的主要解法(即系统实现方案)。对每种解法都应该仔细研究它的可行性。
+    - 技术可行性：使用现有的技术能实现这个系统吗
+    - 经济可行性：这个系统的经济效益能超过它的开发成本吗
+    - 操作可行性：系统的操作方式在这个用户组织内行得通吗
+- 必要时还应该从法律、社会效益等更广泛的方面研究每种解法的可能性。
+
+
+
+## 2.2 可行性研究过程
+
+- 复查系统规模和目标
+- 研究目前正在使用的系统
+- 导出新系统的高层逻辑模型
+- 进一步定义问题
+- 导出和评价供选择的解法
+- 推荐行动方针
+- 草拟开发计划
+- 书写文档提交审查。
+
+
+
+## 2.4 数据流图
+
+
+
+### 2.4.1 数据流图的概念
+
+> 数据流图(DFD)是一种图形化技术，它描绘信息流和数据从输入移动到输出的过程中所经受的变换。
+
+在数据流图中没有任何具体的物理部件，它只是描绘数据在软件中流动和被处理的逻辑过程。
+
+数据流图是系统逻辑功能的图形表示。
+
+
+
+### 2.4.2 数据流图的符号
+
+> 数据流与程序流程图中用箭头表示的控制流有本质不同，千万不要混淆。在数据流图中应该描绘所有可能的数据流向，而不应该描绘出现某个数据流的条件。
+
+（图见 P41）
+
+![查看源图像](https://gss0.baidu.com/-4o3dSag_xI4khGko9WTAnF6hhy/zhidao/wh%3D600%2C800/sign=2b177926c53d70cf4cafa20bc8ecfd38/00e93901213fb80e2fc54ac83ad12f2eb938949c.jpg)
+
+
+
+### 2.4.3 数据流图的用途
+
+- 画数据流图的基本目的是利用它作为交流信息的工具。
+
+```
+数据流图应该分层，并且在把功能级数据流图细化后得到的处理超过9个时，应该采用画分图的办法，也就是把每个主要功能都细化为一张数据流分图，而原有的功能级数据流图用来描绘系统的整体逻辑概貌。
+```
+
+- 数据流图的另一个主要用途是作为分析和设计的工具。
+
+```
+当用数据流图辅助物理系统的设计时，以图中不同处理的定时要求为指南，能够在数据流图上画出许多组自动化边界，每组自动化边界可能意味着一个不同的物理系统，因此可以根据系统的逻辑模型考虑系统的物理实现。
+```
+
+
+
+
+
+## 2.5 数据字典
+
+
+
+### 2.5.1 数据字典的定义
+
+> 数据字典是关于数据的信息的集合，也就是对数据流图中包含的所有元素的定义的集合。
+
+
+
+### 2.5.2 数据字典的内容
+
+数据字典包含下列4类元素的定义：数据流；数据流分量(即数据元素)；数据存储；处理。
+
+
+
+### 2.5.3 定义数据的方法
+
+> 数据字典中的定义就是对数据自顶向下的分解。
+
+由数据元素组成数据的方式只有下述三种基本类型：
+
+- 顺序，即以确定次序连接两个或多个分量
+- 选择，即从两个或多个可能的元素中选取一个
+- 重复，即把指定的分量重复零次或多次
+- 可选，即一个分量是可有可无的(重复零次或一次)。
+
+
+
+### 2.5.4 数据字典的符号
+
+- `=`意思是等价于(或定义为)
+- `+`意思是和(即，连接两个分量)
+- `[]`意思是或(即，从方括弧内列出的若干个分量中选择一个)，通常用“|”号隔开供选择的分量
+- `{}`意思是重复(即，重复花括弧内的分量)
+- `()`意思是可选(即，圆括弧里的分量可有可无)。
+
+
+
+### 2.5.5 数据字典的练习 
+
+![image-20211228184748440](软工复习.assets/image-20211228184748440.png)
